[tool.poetry]
name = "elgato"
version = "1.0.0"
description = "Asynchronous Python client for Elgato Key Lights."
authors = ["Franck Nijhof <opensource@frenck.dev>"]
maintainers = ["Franck Nijhof <opensource@frenck.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/frenck/python-elgato"
repository = "https://github.com/frenck/python-elgato"
documentation = "https://github.com/frenck/python-elgato"
keywords = ["elgato", "keylight", "api", "async", "client"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = ">=3.0.0"
yarl = "^1.6.3"

[tool.poetry.dev-dependencies]
aresponses = "^2.1.4"
autopep8 = "^1.5.5"
black = "^20.8b1"
blacken-docs = "^1.9.2"
coverage = {version = "^5.4", extras = ["toml"]}
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
isort = "^5.7.0"
mypy = "^0.800"
pre-commit = "^2.10.0"
pylint = "^2.6.0"
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"
yamllint = "^1.26.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/frenck/python-elgato/issues"
Changelog = "https://github.com/frenck/python-elgato/releases"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
